refactor(api/runtime): refactor creation of KafkaStreamsContainer
Breaking changes:
 - Remove the StreamExecutionEnvironment#setWaitForTopicsToBeCreated method.
 - Remove TopologyContainer and TopologyContainerFactory classes

Resolves: GH-78